# rust-ffi-examples

c-to-rust_embedded/: Cargo.toml  Makefile  STM32L072CZEx_FLASH.ld  memory.x
c-to-rust_embedded/.cargo/: config
c-to-rust_embedded/src/: lib.rs  main.c  startup_stm32l072xx.s  stm32l0xx_it.c  system_stm32l0xx.c
